log
Sat Mar 19 19:30:54 UTC 2022: 
 list.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:25: error: ‘List {aka struct List}’ has no member named ‘Head’; did you mean ‘head’?
   list->current = list->Head;
                         ^~~~
                         head
list.c: In function ‘nextList’:
list.c:45:21: error: ‘Node {aka struct Node}’ has no member named ‘Next’; did you mean ‘next’?
   if(list->current->Next != NULL)
                     ^~~~
                     next
Compilation failed
0fe323e
Sat Mar 19 19:31:19 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
46de9ec
Sat Mar 19 19:33:07 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:40:23: error: ‘list’ is a pointer; did you mean to use ‘->’?
   list->current = list.head;
                       ^
                       ->
Compilation failed
1c57f12
